# Air-Quality-Project

./: pyproject.toml
config/: config_dev.yaml
src/air_pollution/: config.py  main.py
src/air_pollution/data_loader/: factory.py  json_loader.py
src/air_pollution/data_pipeline/: label_encoder.py  preprocessing.py
src/air_pollution/data_pipeline/data_transformer/: minmax_scaler_transformer.py  standard_scaler_transformer.py
src/air_pollution/model/: factory.py  logistic_model.py  tree_model.py
tests/: test_data_loader.py  test_data_transformer.py  test_label_encoder.py  test_model.py  test_preprocessing.py
