[tool.poetry]
name = "air-pollution"
version = "0.1.0"
description = ""
authors = ["Mariam <mariam_hsein@hotmail.com>"]
readme = "README.md"
packages = [{include = "air_pollution", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.3"
scikit-learn = "^1.5.2"
omegaconf = "^2.3.0"
pydantic = "^2.10.3"
loguru = "^0.7.2"


[tool.poetry.group.dev.dependencies]
pdoc = "^15.0.0"
mypy = "^1.13.0"
ruff = "^0.8.2"
pytest = "^8.3.4"
invoke = "^2.2.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
air_pollution = "air_pollution.main:main"

# mypy configuration
[tool.mypy]
pretty = true
strict = true
python_version = "3.12"
check_untyped_defs = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

# ruff configuration
[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = ["E", "W", "F", "I"] # Specify the types of rules to enforce
ignore = ["E501"]             # Ignore line length warnings

[tool.ruff.format]
quote-style = "double"       # Like Black, use double quotes for strings.
indent-style = "space"       # Like Black, indent with spaces, rather than tabs.
docstring-code-format = true